[package]
name = "anytracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"]}
geo = { version = "0.30.0", features = ["use-serde"] }

strum = "0.27.2"
strum_macros = "0.27.2"
variant_count = "1.2"